--- a/src/style/Quotes.css
+++ b/src/style/Quotes.css
@@ -1,26 +1,52 @@
 
-.quotes-wrapper {
+  .quotes-wrapper {
+	  padding: 20px; 
+	  margin-top: 30px;
+	  height: 250px; 
+	  
+	  overflow: hidden;
+	  display: flex;
+	  justify-content:space-around;
+	}
+	.quotes-container {
+		max-width: 90%;
+		padding:20px;
+	 display: flex;
+	 justify-content: center;
+	 align-items: center;
+	}
 	
-	 /* Nasconde eventuali overflow orizzontali */
-	padding: 20px; /* Aggiungi del padding se necessario */
-	display: flex;
-	justify-content: center;
-	
-  }
-  
-  .quotes-container {
-	display: flex;
-	flex-direction: column;
-
-	
-  }
-  
   .quote {
+	margin: 20px 10px;
+	font-size: 1.2rem;
+	font-style: italic;
+	color: white;
+  }
+  
+  .scroll-down-container {
+	position: relative;
+	text-align: center;
 	
-	color: #fff; /* Cambia il colore in base al tuo design */
-	margin: 20px 10px; /* Aggiungi margine tra le citazioni */
-	max-width: 55%; /* Limita la larghezza delle citazioni */
-	word-wrap: break-word; /* Forza il testo a andare a capo */
-	overflow-wrap: break-word; /* Opzione aggiuntiva per garantire il wrap */
+	color: white;
+	font-size: 1.2rem;
+  }
+  
+  .arrow {
+	
+	margin:0 auto; 
+	margin-top: 5px;
+	
+	
+  }
+  .arrow-icon{
+	
+	width: 50px;
+	height: 50px;
+	
+  }
+  
+  .scroll-text {
+	font-weight: bold;
+	letter-spacing: 1px;
   }
   
