--- a/src/style/Navigation.css
+++ b/src/style/Navigation.css
@@ -1,56 +1,55 @@
-/* Aggiungere margini tra gli elementi della lista */
+/* Navbar link styling */
 .navbar-nav .nav-item {
 	margin: 0 auto;
 	padding: 0 150px;
-	position: relative; /* Necessario per la posizione della linea */
+	position: relative;
   }
   
-  /* effetto hover per la linea inferiore */
+  /* Styling per il link */
   .navbar-nav .nav-link {
 	position: relative;
 	padding-bottom: 5px;
+	display: inline-block;
   }
   
-  .navbar-nav .nav-link:hover {
-	color: #fff;
-	
-  }
+  /* Hover effect per la linea sotto i link */
   .navbar-nav .nav-link::after {
 	content: '';
 	position: absolute;
 	bottom: 0;
 	left: 0;
 	width: 100%;
-	height: 2px; /* Altezza della linea */
-	background-color: #fff; /* Colore della linea */
-	transform: scaleX(0); /* La linea inizia invisibile */
+	height: 2px;
+	background-color: #fff;
+	transform: scaleX(0);
 	transform-origin: bottom right;
 	transition: transform 0.3s ease-out;
   }
   
-  /* Hover effetto per la linea */
+  /* Hover per la linea sotto i link */
   .navbar-nav .nav-link:hover::after {
-	transform: scaleX(1); /* La linea diventa visibile */
+	transform: scaleX(1);
 	transform-origin: bottom left;
   }
-  /* Linea inferiore animata (inizialmente non visibile) */
+  
+  /* Linea sotto il link, inizialmente invisibile */
   .navbar-nav .nav-link .line {
 	content: '';
 	position: absolute;
 	bottom: 0;
 	left: 0;
 	width: 100%;
-	height: 2px; /* Altezza della linea */
-	background-color: #fff; /* Colore della linea */
-	transform: scaleX(0); /* La linea inizia invisibile */
+	height: 2px;
+	background-color: #fff;
+	transform: scaleX(0);
 	transform-origin: bottom right;
 	transition: transform 0.3s ease-out;
-	visibility: hidden; /* Nasconde la linea di default */
+	visibility: hidden;
   }
   
-  /* Hover effetto per la linea */
+  /* Hover per la linea sotto i link */
   .navbar-nav .nav-link:hover .line {
-	transform: scaleX(1); /* La linea diventa visibile */
+	transform: scaleX(1);
 	visibility: visible;
 	transform-origin: bottom left;
   }
